Update 'Add report'button and fix css for spacing between toolbar and header when no bottom line

--- a/front-end/src/app/reports/transactions/transaction.scss
+++ b/front-end/src/app/reports/transactions/transaction.scss
@@ -62,4 +62,5 @@ hr {
 
 :host::ng-deep.p-toolbar {
   border-bottom: 2px solid !important;
+  padding-bottom: 8px;
 }
